Fixed footer from covering content. Renders correctly on mobile too.

--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,10 +1,25 @@
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 70px;
-  background-color: #000000;
-  border-top: solid 5px #3097d1;
-  clear: both;
+html{
+	height:100%;
 }
 
+body{
+	margin:0;
+	min-height:100%;
+	padding:0;
+	position:relative;
+}
+
+body:after{
+	content:'';
+	display:block;
+
+}
+
+footer{
+	position:absolute;
+  width:100%;
+   height: 70px;
+  background-color: #000000;
+  border-top: solid 5px #3097d1;
+  
+}
